fix menubar getting stuck after Alt+Tab
Minor rework of menubar logic. Handle it on keyup,
instead of keydown (which would fire on Alt+Tab).
Do not hide the menubar via .hidden, just set its height to 0.
Then, focusing it explicitly is also not required.

--- a/scss/components/_item-tree.scss
+++ b/scss/components/_item-tree.scss
@@ -202,7 +202,12 @@
 		}
 	}
 }
-	
+
+item-tree-menu-bar[inactive] {
+	max-height: 0 !important;
+	overflow: hidden;
+}
+
 $-itemTypesIcons: (
 	artwork,
 	attachment-epub,
